# kalman-filter-api

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
aifellowshipkfapi/: __init__.py  dataset.py  features.py  kalman.py  main.py  plots.py
aifellowshipkfapi/modeling/: my_filter.py  predict.py  sensor_data.csv  train.py
models/: __init__.py  schemas.py
notebooks/: kf.ipynb
test/: test.py
