[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aifellowshipkfapi"
version = "0.0.1"
description = "this is assaignment given by fusemachine faculty"
authors = [
  { name = "sandeep fusemachine" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["aifellowshipkfapi"]
include = ["pyproject.toml", "aifellowshipkfapi/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["aifellowshipkfapi"]
force-sort-within-sections = true

